{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 443,
  "lineage": "9eb83eb9-0e2a-140f-8d16-28c26b666098",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0a62bb5405de2c0",
            "domain": "vpc",
            "id": "eipalloc-0b0a62bb5405de2c0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-19-186.compute-1.amazonaws.com",
            "public_ip": "3.216.19.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sayankec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:925550470303:instance/i-0481e1c5647ab2219",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0481e1c5647ab2219",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sayankkavision",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4c596f6eff6aeda",
            "private_dns": "ip-160-160-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "160.160.1.194",
            "public_ip": "54.83.145.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0392f790839ad25a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02859151581cb8756",
            "tags": {
              "Name": "sayankec2"
            },
            "tags_all": {
              "Name": "sayankec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004377798ba67cfea"
            ]
          },
          "dependencies": [
            "aws_security_group.sayanksw",
            "aws_subnet.sayankpublicsubnet",
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sayankgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:internet-gateway/igw-01ba9c089086f627e",
            "id": "igw-01ba9c089086f627e",
            "owner_id": "925550470303",
            "tags": {
              "Name": "sayankgw"
            },
            "tags_all": {
              "Name": "sayankgw"
            },
            "vpc_id": "vpc-08132ed1764feb372"
          },
          "dependencies": [
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sayanknatgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0a62bb5405de2c0",
            "connectivity_type": "public",
            "id": "nat-0911715775d430484",
            "network_interface_id": "eni-08e7987cc4dce0803",
            "private_ip": "160.160.2.81",
            "public_ip": "3.216.19.186",
            "subnet_id": "subnet-082082da566a2ae75",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.sayankgw",
            "aws_subnet.sayankpvtsubnet",
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sayankpvtroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:route-table/rtb-04cfcd841e474cc99",
            "id": "rtb-04cfcd841e474cc99",
            "owner_id": "925550470303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ba9c089086f627e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sayankroute"
            },
            "tags_all": {
              "Name": "sayankroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-08132ed1764feb372"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sayankgw",
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sayankroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:route-table/rtb-00e76afce81088924",
            "id": "rtb-00e76afce81088924",
            "owner_id": "925550470303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ba9c089086f627e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sayankroute"
            },
            "tags_all": {
              "Name": "sayankroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-08132ed1764feb372"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sayankgw",
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c902f0663a6713a1",
            "route_table_id": "rtb-00e76afce81088924",
            "subnet_id": "subnet-02859151581cb8756"
          },
          "dependencies": [
            "aws_internet_gateway.sayankgw",
            "aws_route_table.sayankroute",
            "aws_subnet.sayankpublicsubnet",
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c72ea576d0916c79",
            "route_table_id": "rtb-04cfcd841e474cc99",
            "subnet_id": "subnet-082082da566a2ae75"
          },
          "dependencies": [
            "aws_internet_gateway.sayankgw",
            "aws_route_table.sayankpvtroute",
            "aws_subnet.sayankpvtsubnet",
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sayanksw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:security-group/sg-004377798ba67cfea",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004377798ba67cfea",
            "ingress": [
              {
                "cidr_blocks": [
                  "160.160.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sayanksw",
            "name_prefix": "",
            "owner_id": "925550470303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sayanksw"
            },
            "tags_all": {
              "Name": "sayanksw"
            },
            "timeouts": null,
            "vpc_id": "vpc-08132ed1764feb372"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sayankpublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:subnet/subnet-02859151581cb8756",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "160.160.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02859151581cb8756",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925550470303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sayankpublicsubnet"
            },
            "tags_all": {
              "Name": "sayankpublicsubnet"
            },
            "vpc_id": "vpc-08132ed1764feb372"
          },
          "dependencies": [
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sayankpvtsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:subnet/subnet-082082da566a2ae75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "160.160.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082082da566a2ae75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925550470303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sayankpvtsubnet"
            },
            "tags_all": {
              "Name": "sayankpvtsubnet"
            },
            "vpc_id": "vpc-08132ed1764feb372"
          },
          "dependencies": [
            "aws_vpc.sayankvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sayankvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:vpc/vpc-08132ed1764feb372",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "160.160.0.0/16",
            "default_network_acl_id": "acl-045792b40057faf6a",
            "default_route_table_id": "rtb-0ef87f8cb6623adbb",
            "default_security_group_id": "sg-0285e0bad2cb45a04",
            "dhcp_options_id": "dopt-0c297bd28a147fd82",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08132ed1764feb372",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef87f8cb6623adbb",
            "owner_id": "925550470303",
            "tags": {
              "Name": "sayankvpc"
            },
            "tags_all": {
              "Name": "sayankvpc"
            }
          }
        }
      ]
    }
  ]
}